# foxwallet-extension

./: .env.emample  .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .gitmodules  .prettierignore  .prettierrc.cjs  .prettierrc.js  LICENSE  README.md  babel.config.json  index.html  manifest.ts  offscreen.html  offscreen_tx.html  package-lock.json  package.json  prettier.config.js  tailwind.config.cjs  tsconfig.json  vite-injector.config.ts  vite.config.ts
@aleohq/aleo_wasm/: Cargo.toml  LICENSE.md  PUBLISH.md  README.md
@aleohq/aleo_wasm/src/: lib.rs  types.rs
@aleohq/aleo_wasm/src/account/: signature.rs  view_key.rs
@aleohq/aleo_wasm/src/future/: mod.rs
@aleohq/aleo_wasm/src/programs/: execution.rs  macros.rs  mod.rs  plaintext.rs  program.rs  proving_key.rs  verifying_key.rs
@aleohq/aleo_wasm/src/programs/manager/: deploy.rs  execute.rs  join.rs  mod.rs
@aleohq/aleo_wasm/src/record/: record_plaintext.rs
@aleohq/aleo_wasm/src/utils/: hash.rs
@aleohq/wasm/: README.md  package.json
@provablehq/wasm/: build.js  build.rs  package.json
aleo/: account.ts  function-key-provider.ts  index.ts  network-client.ts  program-manager.ts  record-provider.ts  utils.ts
aleo/models/: block.ts  confirmed_transaction.ts  execution.ts  fee.ts  transaction.ts  transition.ts
aleo_wasm/: Cargo.toml  prepublish.js
aleo_wasm/src/: lib.rs  types.rs
app/: App.scss  App.tsx  index.scss  index.tsx
app/database/: AccountDatabase.ts  AleoBlockDatabase.ts  DappDatabase.ts  ExtensionDatabase.ts
app/hooks/: useAleoBalance.ts  useAppStatus.ts  useAssetList.ts  useAuth.ts  useBalance.ts  useBottomReach.ts  useChainList.ts  useChainMode.ts  useClient.ts  useCoinService.ts  useCurrAccount.ts  useDappRequest.ts  useDataRef.ts  useFaucetActionOption.tsx  useFaucetStatus.ts  useFuseSearch.ts  useGasFee.ts  useGasGrade.ts  useGroupAccount.ts  useGroupAccountAssets.ts  useInterval.ts  useLocationParams.ts  useNonce.ts  usePrivateKey.ts  useRecord.ts  useSafeParams.ts  useSafeTokenInfo.ts  useSearchNetworks.ts  useSearchTokens.ts  useSendingTxStatus.ts  useStore.ts  useSyncProgress.ts  useTab.ts  useThemeStyle.ts  useToken.ts  useTokenPrice.ts  useTransactionDetail.ts  useTxHistory.ts  useUserSelectedChains.ts  useWallets.ts
app/locales/: i18.ts  time.ts
app/routes/: index.tsx
app/services/: PriceService.ts  TokenService.ts
app/store/: account.ts  accountV2.ts  addressModel.ts  coinBalanceModelV2.ts  coinPriceModelV2.ts  index.ts  multiChain.ts  setting.ts  store.ts  token.ts  user.ts  wallet.ts
core/coins/: CoinBasic.ts  CoinBasicFactory.ts  CoinServiceBasic.ts  CoinServiceEntry.ts
core/constants/: chain.ts  currency.ts  index.ts
core/helper/: AccountOption.ts  ChainConfig.ts  ChainUniqueId.ts  CoinBasic.ts  CoinType.ts
core/types/: Balance.ts  ChainBaseConfig.ts  ChainUniqueId.ts  CoinBasic.ts  CoinConfig.ts  CoinCurve.ts  CoinDerivation.ts  CoinType.ts  Currency.ts  EncryptedField.ts  Error.ts  ExplorerLanguages.ts  GasFee.ts  HDKeyring.ts  KeyPair.ts  KeyPairV1.ts  NFT.ts  NFTMarket.ts  (+8 more)
env/: index.ts
offscreen/: aleo.di.ts  aleo.ts  aleo_tx.ts  helper.ts  mainLoop.ts  offscreen.ts  offscreen_helper.ts  worker.ts
offscreen_sync/: aleo.ts  aleo_tx.ts  helper.ts  index.ts  main_loop.ts  worker.ts
offscreen_transaction/: rollup.config.js  tsconfig.json
offscreen_tx/: rollup.config.js
patches/: @aleohq+wasm+0.5.9.patch  @crxjs+vite-plugin+1.0.13.patch
public/: injector.js
scripts/: postinstall.cjs  predev.js  prerelease.js  translate.cjs
static/: manifest.json
transaction/: tsconfig.json
upgradeTool/: upgrade.sh
(+514 files in other folders)
